# rust

./: Cargo.toml  README.md
data/: finance.json
src/: main.rs  ui.rs  utils.rs
src/commands/: compare.rs  disk.rs  duplicates.rs  empty.rs  hash.rs  large.rs  list.rs  mod.rs  recent.rs  rename.rs  search.rs  stats.rs
