[package]
name = "ftools"
version = "1.0.0"
edition = "2024"
description = "A powerful CLI toolkit for file operations - find duplicates, search content, bulk rename, analyze disk usage"
authors = ["Your Name"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
colored = "2.0"
regex = "1.10"
glob = "0.3"
humansize = "2.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
memmap2 = "0.9"
num_cpus = "1.16"

[[bin]]
name = "ftools"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

